Added Example Resource GET paths and some fake data
